<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/DetailsUnitsStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inventory_details" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="67dp">

                <!-- The input text field for the name of the item -->
                <EditText
                    android:id="@+id/input_name"
                    style="@style/DetailsUnitsStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/increment_button" />

                <!-- The input text field for the number of items currently
               in stock -->
                <EditText
                    android:id="@+id/input_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:hint="@string/hint_item_quantity"
                    android:inputType="number"
                    android:paddingRight="16dp"
                    android:paddingTop="4dp"
                    android:textAppearance="?android:textAppearanceSmall" />

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/decrement_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="100dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <!-- The U.S. dollar icon for the price input field -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dollar_sign"
                    android:textSize="17sp" />

                <!-- The input text field for the price of the item -->
                <EditText
                    android:id="@+id/input_price"
                    style="@style/DetailsUnitsStyle"
                    android:hint="@string/hint_item_price"
                    android:inputType="number"
                    android:paddingRight="30dp"
                    android:paddingTop="16dp"
                    android:textAppearance="?android:textAppearanceSmall" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_image_hint" />

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/detail_supplier_edit"
            style="@style/DetailsUnitsStyle"
            android:maxLines="1"
            android:hint="@string/order_hint"
            android:inputType="textPersonName"
            android:layout_marginStart="144dp"
            android:textAppearance="?android:textAppearanceSmall" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_more" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="25dp"
            android:text="@string/action_add" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp"
            android:text="@string/delete" />

    </LinearLayout>
</ScrollView>